[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/scripts/ScreenSettings.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/ui/flags/flag_fr.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Overpass-Regular_18.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/images/ui/sound_fx_on.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/music_on.png" type="Texture" id=6]
[ext_resource path="res://src/actors/WorldTileMap.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/ui/home.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/flags/flag_en.png" type="Texture" id=10]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=11]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="WorldTileMap" parent="." instance=ExtResource( 7 )]

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "TITLE_SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Container"]
margin_left = 100.0
margin_top = 214.0
margin_right = 316.0
margin_bottom = 362.0
custom_constants/separation = 60

[node name="Language" type="HBoxContainer" parent="Container/VBox"]
margin_right = 216.0
margin_bottom = 32.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Container/VBox/Language"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 25.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 4 )
text = "LABEL_LANGUAGE"
clip_text = true

[node name="ButtonEn" type="Button" parent="Container/VBox/Language"]
margin_left = 120.0
margin_right = 158.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
icon = ExtResource( 10 )

[node name="ButtonFr" type="Button" parent="Container/VBox/Language"]
margin_left = 178.0
margin_right = 216.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )

[node name="Sound" type="HBoxContainer" parent="Container/VBox"]
margin_top = 92.0
margin_right = 216.0
margin_bottom = 148.0
custom_constants/separation = 20
alignment = 1

[node name="MusicButton" type="Button" parent="Container/VBox/Sound"]
margin_left = 36.0
margin_right = 98.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 6 )

[node name="EffectsButton" type="Button" parent="Container/VBox/Sound"]
margin_left = 118.0
margin_right = 180.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 5 )

[node name="MainMenuButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.0
margin_top = -152.0
margin_right = 31.0
margin_bottom = -96.0
mouse_default_cursor_shape = 2
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTransition" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="Container/VBox/Language/ButtonEn" to="." method="_on_ButtonEn_pressed"]
[connection signal="pressed" from="Container/VBox/Language/ButtonFr" to="." method="_on_ButtonFr_pressed"]
[connection signal="pressed" from="Container/VBox/Sound/MusicButton" to="." method="_on_MusicButton_pressed"]
[connection signal="pressed" from="Container/VBox/Sound/EffectsButton" to="." method="_on_EffectsButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
